Squeeze* them all - goodbye SlimServer, welcome SqueezeCenter! - strings - documentation, readme etc. - comments
git-svn-id: file:///home/awy/mirror/slim/trunk/platforms@13299 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/win32/Getting Started.de.html
+++ b/win32/Getting Started.de.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3c.org/TR/1999/REC-html401-19991224/loose.dtd">
-<!-- saved from url=(0089)http://svn.slimdevices.com/*checkout*/branches/6.5/platforms/win32/Getting%20Started.html -->
-<HTML><HEAD><TITLE>Erste Schritte mit dem SlimServer, Version 6.5.2</TITLE>
+<!-- saved from url=(0089)http://svn.slimdevices.com/*checkout*/branches/7.0/platforms/win32/Getting%20Started.html -->
+<HTML><HEAD><TITLE>Erste Schritte mit dem SqueezeCenter, Version 7.0a1</TITLE>
 <META http-equiv=Content-Type content="text/html; charset=UTF-8">
 <META http-equiv=Content-Style-Type content=text/css>
 <META content="MSHTML 6.00.2900.3059" name=GENERATOR>
@@ -50,23 +50,23 @@ LI.l2 {
 </STYLE>
 </HEAD>
 <BODY>
-<H1>Erste Schritte mit dem SlimServer</H1>
-<P class=p2>Version 6.5.2</P>
-<P class=p3>Vielen Dank, dass Sie die neueste Version von SlimServer for Windows heruntergeladen haben. Scrollen Sie weiter nach unten, oder klicken Sie auf einen der folgenden Links, um Informationen zu den jeweiligen Themen zu erhalten.</P>
+<H1>Erste Schritte mit dem SqueezeCenter</H1>
+<P class=p2>Version 7.0a1</P>
+<P class=p3>Vielen Dank, dass Sie die neueste Version von SqueezeCenter for Windows heruntergeladen haben. Scrollen Sie weiter nach unten, oder klicken Sie auf einen der folgenden Links, um Informationen zu den jeweiligen Themen zu erhalten.</P>
 <UL>
   <LI class=l1><SPAN class=s1><A 
-  href="http://svn.slimdevices.com/*checkout*/branches/6.5/platforms/win32/Getting%20Started.html#Install">Nach der Installation</A></SPAN> 
+  href="http://svn.slimdevices.com/*checkout*/branches/7.0/platforms/win32/Getting%20Started.html#Install">Nach der Installation</A></SPAN> 
   <LI class=l1><SPAN class=s1><A 
-  href="http://svn.slimdevices.com/*checkout*/branches/6.5/platforms/win32/Getting%20Started.html#WhatsNew">Neuheiten</A></SPAN> 
+  href="http://svn.slimdevices.com/*checkout*/branches/7.0/platforms/win32/Getting%20Started.html#WhatsNew">Neuheiten</A></SPAN> 
   <LI class=l1><SPAN class=s1><A 
-  href="http://svn.slimdevices.com/*checkout*/branches/6.5/platforms/win32/Getting%20Started.html#Firmware">Firmware-Aktualisierung</A></SPAN> 
+  href="http://svn.slimdevices.com/*checkout*/branches/7.0/platforms/win32/Getting%20Started.html#Firmware">Firmware-Aktualisierung</A></SPAN> 
   <LI class=l1><SPAN class-?s1?><A 
-  href="http://svn.slimdevices.com/*checkout*/branches/6.5/platforms/win32/Getting%20Started.html#RemoteProblem">Eingeben eines WPA-Kennworts &uuml;ber die Fernbedienung</A></SPAN> 
+  href="http://svn.slimdevices.com/*checkout*/branches/7.0/platforms/win32/Getting%20Started.html#RemoteProblem">Eingeben eines WPA-Kennworts &uuml;ber die Fernbedienung</A></SPAN> 
   <LI class=l1><SPAN class=s1><A 
-  href="http://svn.slimdevices.com/*checkout*/branches/6.5/platforms/win32/Getting%20Started.html#iTunes">iTunes-Informationen</A></SPAN> 
+  href="http://svn.slimdevices.com/*checkout*/branches/7.0/platforms/win32/Getting%20Started.html#iTunes">iTunes-Informationen</A></SPAN> 
   <LI class=l2><SPAN class=s1><A 
-  href="http://svn.slimdevices.com/*checkout*/branches/6.5/platforms/win32/Getting%20Started.html#Streaming">Streaming-Wiedergabe &uuml;ber das Internet</A></SPAN> </LI></UL>
-<P class=p3>Bei Fragen oder Problemen konsultieren Sie bitte die SlimServer-Weboberfl&auml;che oder die <A 
+  href="http://svn.slimdevices.com/*checkout*/branches/7.0/platforms/win32/Getting%20Started.html#Streaming">Streaming-Wiedergabe &uuml;ber das Internet</A></SPAN> </LI></UL>
+<P class=p3>Bei Fragen oder Problemen konsultieren Sie bitte die SqueezeCenter-Weboberfl&auml;che oder die <A 
 href="http://www.slimdevices.com/redir.html?http://slimdevices.custhelp.com/cgi-bin/slimdevices.cfg/php/enduser/std_alp.php"><SPAN 
 class=s2>H&auml;ufig gestellten Fragen (FAQ)</SPAN></A>, besuchen Sie unser <A 
 href="http://forums.slimdevices.com/"><SPAN class=s2>Benutzerforum</SPAN></A>, oder wenden Sie sich an unseren technischen Support unter <A href="mailto:support@slimdevices.com"><SPAN 
@@ -74,50 +74,50 @@ class=s2>support@slimdevices.com</SPAN></A>.</P>
 <P class=p3>Vielen Dank,</P>
 <P class=p3>das Team von Logitech Streaming Media Systems</P>
 <P class=p4><B><A name=Installation></A>Nach der Installation</B></P>
-<P class=p3>Doppelklicken Sie auf das SlimServer-Symbol in der Windows-Taskleiste rechts unten auf Ihrem Bildschirm, um ein Browserfenster f&uuml;r den SlimServer zu &ouml;ffnen.</P>
-<P class=p3>Klicken Sie mit der rechten Maustaste auf das Taskleistensymbol, um die Hintergrundausf&uuml;hrung des SlimServers zu beenden oder zu starten. 
-<P class=p3>Wenn Sie iTunes von Apple verwenden, importiert der SlimServer automatisch Ihre iTunes-Bibliothek. Wenn Sie der SlimServer-Bibliothek &uuml;ber iTunes Musik hinzuf&uuml;gen oder Titel aus ihr entfernen, erkennt der SlimServer diese Aktion und durchsucht die Titelinformationen erneut.</P><A 
+<P class=p3>Doppelklicken Sie auf das SqueezeCenter-Symbol in der Windows-Taskleiste rechts unten auf Ihrem Bildschirm, um ein Browserfenster f&uuml;r den SqueezeCenter zu &ouml;ffnen.</P>
+<P class=p3>Klicken Sie mit der rechten Maustaste auf das Taskleistensymbol, um die Hintergrundausf&uuml;hrung des SqueezeCenters zu beenden oder zu starten. 
+<P class=p3>Wenn Sie iTunes von Apple verwenden, importiert der SqueezeCenter automatisch Ihre iTunes-Bibliothek. Wenn Sie der SqueezeCenter-Bibliothek &uuml;ber iTunes Musik hinzuf&uuml;gen oder Titel aus ihr entfernen, erkennt der SqueezeCenter diese Aktion und durchsucht die Titelinformationen erneut.</P><A 
 name=WhatsNew>
-<P class=p4>Neuheiten in Version 6.5.2</P></A>
-<P class=p3>SlimServer Version 6.5.2 enth&auml;lt viele Verbesserungen. In der folgenden Liste sind nur die wichtigsten &Auml;nderungen aufgez&auml;hlt, die die Bildschirmanzeige beeinflussen oder Ihre Interaktion mit der Squeezebox oder dem Transporter &auml;ndern/verbessern. Bei Interesse k&ouml;nnen Sie auch die <A 
-href="http://svn.slimdevices.com/*checkout*/branches/6.5/server/Changelog6.html">vollst&auml;ndige Liste</SPAN></A> der &Auml;nderungen anzeigen.</P>
+<P class=p4>Neuheiten in Version 7.0a1</P></A>
+<P class=p3>SqueezeCenter Version 7.0a1 enth&auml;lt viele Verbesserungen. In der folgenden Liste sind nur die wichtigsten &Auml;nderungen aufgez&auml;hlt, die die Bildschirmanzeige beeinflussen oder Ihre Interaktion mit der Squeezebox oder dem Transporter &auml;ndern/verbessern. Bei Interesse k&ouml;nnen Sie auch die <A 
+href="http://svn.slimdevices.com/*checkout*/branches/7.0/server/Changelog6.html">vollst&auml;ndige Liste</SPAN></A> der &Auml;nderungen anzeigen.</P>
 <UL>
   <LI class=l1>Lokalisiert in 6 Sprachen: Englisch, Deutsch, Franz&ouml;sisch, Spanisch, Italienisch, Niederl&auml;ndisch und Hebr&auml;isch, einschlie&szlig;lich der Installer f&uuml;r Mac und Windows. Weitere Sprachen werden gegebenenfalls in sp&auml;teren Versionen hinzugef&uuml;gt. Falls Sie uns bei der Lokalisierung, einschlie&szlig;lich der &Uuml;bersetzung und des Testens in der Zielsprache, behilflich sein m&ouml;chten, wenden Sie sich bitte an unser Entwicklungsteam unter <A 
   href="mailto:developers@slimdevices.com"><SPAN 
   class=s2>developers@slimdevices.com</SPAN></A>. 
   <LI class=l1>&Auml;nderung der Lautst&auml;rkeregelung f&uuml;r die Squeezebox, die Squeezebox2 und die Squeezebox v3. Es wird nun eine Skala von 0 bis 100 verwendet. 
   <LI class=l1>Alben, Interpreten, Stilrichtungen und Jahrg&auml;nge k&ouml;nnen jetzt als Favoriten gespeichert werden. 
-  <LI class=l1>Mehrere Verbesserungen des SlimServer-Suchvorgangs in Ihrer Musikbibliothek, einschlie&szlig;lich: Suche nur nach Dateien, die nach der letzten Suche ge&auml;ndert wurden, und Suche nur nach Dateien, die auf der Festplatte aber nicht in der SlimServer-Datenbank vorhanden sind. 
-  <LI class=l1>Da die Squeezebox keine Wiedergabe von Musik unterst&uuml;tzt, bei der die Verwaltung digitaler Rechte (DRM) angewendet wird (z.&nbsp;B. Plays for Sure von Microsoft oder FairPlay von Apple), werden Titel mit DRM aus Ihrer lokalen Musikbibliothek nicht in die SlimServer-Datenbank aufgenommen. 
+  <LI class=l1>Mehrere Verbesserungen des SqueezeCenter-Suchvorgangs in Ihrer Musikbibliothek, einschlie&szlig;lich: Suche nur nach Dateien, die nach der letzten Suche ge&auml;ndert wurden, und Suche nur nach Dateien, die auf der Festplatte aber nicht in der SqueezeCenter-Datenbank vorhanden sind. 
+  <LI class=l1>Da die Squeezebox keine Wiedergabe von Musik unterst&uuml;tzt, bei der die Verwaltung digitaler Rechte (DRM) angewendet wird (z.&nbsp;B. Plays for Sure von Microsoft oder FairPlay von Apple), werden Titel mit DRM aus Ihrer lokalen Musikbibliothek nicht in die SqueezeCenter-Datenbank aufgenommen. 
   <LI class=l1>Die Squeezebox2 und die Squeezebox v3 beinhalten nun die systemeigene Unterst&uuml;tzung des Musikformats Ogg. 
   <LI class=l1>Ge&auml;ndertes Verhalten von Suchen in durchnummerierten Listen. Das Verhalten &auml;ndert sich nicht bei Listen mit 10 oder weniger Elementen (die Tasten 1-9 f&uuml;hren immer noch direkt zu der entsprechenden Nummer, 0 entspricht 10). Bei l&auml;ngeren Listen wird der Suchanfrage jede gedr&uuml;ckte Taste hinzugef&uuml;gt; durch Dr&uuml;cken der Tasten 1, 4, 2 springen Sie zun&auml;chst zu Element 1, dann zu Element 14 und dann zu Element 142 in der Liste. 
   <LI class=l1>Wenn die Verbindung eines Players zum Server unterbrochen wird, erscheint statt einer Fehlermeldung nun eine leere Anzeige. Durch Dr&uuml;cken einer beliebigen Taste auf der Fernbedienung wird die Fehlermeldung angezeigt. Dadurch soll verhindert werden, dass Sie mitten in der Nacht durch eine grelle Fehlermeldung aufgeweckt werden. 
   <LI class=l2>Beim Transporter wurde das Verhalten des TransNav-Knopfs verbessert. </LI></UL><A name=Firmware>
 <P class=p4>Firmware-Aktualisierung</A></P>
-<P class=p3>Beim ersten Herstellen einer Verbindung von einer Squeezebox oder einem Transporter zum SlimServer werden Sie m&ouml;glicherweise dazu aufgefordert, die Firmware zu aktualisieren. Dr&uuml;cken Sie die Taste &bdquo;Brightness&ldquo; auf der Fernbedienung, und halten Sie sie gedr&uuml;ckt, bis die Firmware-Aktualisierung beginnt.</P><A name=RemoteProblem>
+<P class=p3>Beim ersten Herstellen einer Verbindung von einer Squeezebox oder einem Transporter zum SqueezeCenter werden Sie m&ouml;glicherweise dazu aufgefordert, die Firmware zu aktualisieren. Dr&uuml;cken Sie die Taste &bdquo;Brightness&ldquo; auf der Fernbedienung, und halten Sie sie gedr&uuml;ckt, bis die Firmware-Aktualisierung beginnt.</P><A name=RemoteProblem>
 <P class=p4>Eingeben eines WPA-Kennworts &uuml;ber die Fernbedienung</P></A>
 <P class=p3>Die Handb&uuml;cher f&uuml;r die Squeezebox und den Transporter enthalten einen Fehler im Abschnitt &uuml;ber WPA-Kennw&ouml;rter. Laut Handbuch m&uuml;ssten Sie die PLAY-Taste dr&uuml;cken, um ein Zeichen einzuf&uuml;gen, und die ADD-Taste, um ein Zeichen zu l&ouml;schen. Die Implementierung ist genau umgekehrt. Im Handbuch sollte stehen, dass durch ADD ein Zeichen hinzugef&uuml;gt und durch PLAY ein Zeichen gel&ouml;scht wird.</P><A name=iTunes>
 <P class=p4>Unterst&uuml;tzung von iTunes-Bibliotheken</A></P>
-<P class=p3>Wenn Sie Ihre Musik mit iTunes von Apple verwalten, importiert der SlimServer automatisch Ihre iTunes-Bibliothek. Wenn Sie der SlimServer-Bibliothek &uuml;ber iTunes Musik hinzuf&uuml;gen oder Titel aus ihr entfernen, erkennt der SlimServer die &Auml;nderung und durchsucht die Titelinformationen erneut.</P>
-<P class=p8>Wenn Sie nicht m&ouml;chten, dass der SlimServer die iTunes-Informationen verwendet, m&uuml;ssen Sie einen Ordner f&uuml;r Ihre Musikbibliothek angegeben. Rufen Sie hierzu die SlimServer-Weboberfl&auml;che auf, klicken Sie auf &bdquo;Server-Einstellungen&ldquo;, und geben Sie einen Ordner f&uuml;r Ihre Musik an. Wenn Sie Musik in Ihrer Bibliothek hinzuf&uuml;gen oder verschieben, m&uuml;ssen Sie die erneute Suche manuell initiieren, indem Sie auf der Seite &bdquo;Server-Einstellungen&ldquo; der SlimServer-Weboberfl&auml;che auf &bdquo;Musiksammlung durchsuchen&ldquo; klicken.</P>
+<P class=p3>Wenn Sie Ihre Musik mit iTunes von Apple verwalten, importiert der SqueezeCenter automatisch Ihre iTunes-Bibliothek. Wenn Sie der SqueezeCenter-Bibliothek &uuml;ber iTunes Musik hinzuf&uuml;gen oder Titel aus ihr entfernen, erkennt der SqueezeCenter die &Auml;nderung und durchsucht die Titelinformationen erneut.</P>
+<P class=p8>Wenn Sie nicht m&ouml;chten, dass der SqueezeCenter die iTunes-Informationen verwendet, m&uuml;ssen Sie einen Ordner f&uuml;r Ihre Musikbibliothek angegeben. Rufen Sie hierzu die SqueezeCenter-Weboberfl&auml;che auf, klicken Sie auf &bdquo;Server-Einstellungen&ldquo;, und geben Sie einen Ordner f&uuml;r Ihre Musik an. Wenn Sie Musik in Ihrer Bibliothek hinzuf&uuml;gen oder verschieben, m&uuml;ssen Sie die erneute Suche manuell initiieren, indem Sie auf der Seite &bdquo;Server-Einstellungen&ldquo; der SqueezeCenter-Weboberfl&auml;che auf &bdquo;Musiksammlung durchsuchen&ldquo; klicken.</P>
 <P class=p4>Informationen zu Titeln aus dem iTunes Music Store</P>
 <P class=p3>Da Apple f&uuml;r die meisten &uuml;ber den iTunes Music Store verkauften Titel einen DRM-Wrapper verwendet, erhalten Sie f&uuml;r diese Dateien nur begrenzte Nutzungsrechte. Ein wichtiges Recht, das Apple Ihnen nicht gew&auml;hrt, ist die Wiedergabe des Titels auf einem Ger&auml;t, das nicht von Apple stammt (eine Ausnahme hierf&uuml;r ist der Computer von dem aus Sie den Titel gekauft haben). Solange Apple seine Einstellung zur Lizenzierung oder zur Aufgabe von FairPlay nicht &auml;ndert, k&ouml;nnen Sie diese Titel nicht auf der Squeezebox oder dem Transporter wiedergeben.</P>
-<P class=p4>Einige der Titel in der iTunes-Bibliothek werden nicht auf dem SlimServer angezeigt oder lassen sich nicht &ouml;ffnen</P>
+<P class=p4>Einige der Titel in der iTunes-Bibliothek werden nicht auf dem SqueezeCenter angezeigt oder lassen sich nicht &ouml;ffnen</P>
 <P class=p3>Wenn Sie Ihre iTunes-Musikdateien verschoben haben, exportiert iTunes m&ouml;glicherweise falsche Informationen &uuml;ber die Titel in der Bibliothek. Sie m&uuml;ssen sicherstellen, dass iTunes den richtigen Ordner f&uuml;r Ihre Musikbibliothek kennt.</P>
 <P class=p3>Klicken Sie in den iTunes-Einstellungen auf &bdquo;Erweitert&ldquo;. &Auml;ndern Sie den Pfad zu Ihrem Musikbibliothek-Ordner, falls ein falscher Pfad angegeben ist. Falls der richtige Pfad angegeben ist, geben Sie einen anderen Ordner und dann wieder den richtigen Ordner an. iTunes aktualisiert dann die Pfade zu Ihren Musiktiteln und exportiert die richtigen Daten. (Durch diese Vorgehensweise wird Ihre Musik nicht verschoben, sondern iTunes wird gezwungen, Ihre Musikbibliothek zu durchsuchen und die Pfade zu den Titeln zu aktualisieren.)</P>
 <P class=p3>Wenn sich das Problem dadurch nicht beheben l&auml;sst, liegt es vielleicht daran, dass iTunes &Auml;nderungen in den Einstellungen &bdquo;iTunes Musik-Ordner verwalten&ldquo; oder &bdquo;Dateinamen mit Titelnummer erstellen&ldquo; nicht verarbeiten kann. Versuchen Sie, diese Einstellungen zur &auml;ndern und die &Auml;nderungen dann wieder r&uuml;ckg&auml;ngig zu machen, sodass iTunes die Informationen &uuml;ber Ihre Musikdateien richtig aktualisiert. Beachten Sie, dass bei der Verwaltung Ihrer Musikdateien durch iTunes m&ouml;glicherweise Dateien verschoben oder umbenannt werden.</P><A name=Streaming>
 <P class=p4>Streaming-Wiedergabe &uuml;ber das Internet</A></P>
-<P class=p3>SlimServer wurde zum Streaming von MP3-Musik auf eine Squeezebox, einen Transporter oder einen SLIMP3-Netzwerk-Musikplayer entwickelt. Als zus&auml;tzliche Funktion ist auch ein Streaming Ihrer MP3-Dateien &uuml;ber das Internet auf einen beliebigen Software-Player m&ouml;glich, der MP3-Streaming unterst&uuml;tzt.</P>
-<P class=p3>Installieren Sie zun&auml;chst die SlimServer-Software und vergewissern Sie sich, dass der Computer, der als SlimServer verwendet wird, &uuml;ber das Internet erreichbar ist. Andernfalls m&uuml;ssen Sie Port 9000 auf Ihrem Router an den SlimServer-Computer weiterleiten. (Anweisungen hierzu finden Sie in der Dokumentation Ihres Routers). Verfahren Sie dann wie folgt:</P>
+<P class=p3>SqueezeCenter wurde zum Streaming von MP3-Musik auf eine Squeezebox, einen Transporter oder einen SLIMP3-Netzwerk-Musikplayer entwickelt. Als zus&auml;tzliche Funktion ist auch ein Streaming Ihrer MP3-Dateien &uuml;ber das Internet auf einen beliebigen Software-Player m&ouml;glich, der MP3-Streaming unterst&uuml;tzt.</P>
+<P class=p3>Installieren Sie zun&auml;chst die SqueezeCenter-Software und vergewissern Sie sich, dass der Computer, der als SqueezeCenter verwendet wird, &uuml;ber das Internet erreichbar ist. Andernfalls m&uuml;ssen Sie Port 9000 auf Ihrem Router an den SqueezeCenter-Computer weiterleiten. (Anweisungen hierzu finden Sie in der Dokumentation Ihres Routers). Verfahren Sie dann wie folgt:</P>
 <UL>
   <LI class=l1>&Ouml;ffnen Sie in Ihrer MP3-Player-Software einen Stream zum URL: <A 
   href="http://localhost:9000/stream.mp3"><SPAN 
-  class=s2>http://localhost:9000/stream.mp3</SPAN></A>. (Ersetzen Sie &bdquo;localhost&ldquo; durch die IP-Adresse des SlimServer-Computers). Falls Sie den Kennwortschutz von SlimServer verwenden, m&uuml;ssen Sie einen leicht ver&auml;nderten URL verwenden: <A href="http://username:password@localhost:9000/stream.mp3"><SPAN 
+  class=s2>http://localhost:9000/stream.mp3</SPAN></A>. (Ersetzen Sie &bdquo;localhost&ldquo; durch die IP-Adresse des SqueezeCenter-Computers). Falls Sie den Kennwortschutz von SqueezeCenter verwenden, m&uuml;ssen Sie einen leicht ver&auml;nderten URL verwenden: <A href="http://username:password@localhost:9000/stream.mp3"><SPAN 
   class=s2>http://Benutzername:Kennwort@localhost:9000/stream.mp3</SPAN></A>. Bei einigen MP3-Playern werden Sie dazu aufgefordert, Ihren Benutzernamen und Ihr Kennwort einzugeben. 
-  <LI class=l1>Rufen Sie die SlimServer-Weboberfl&auml;che auf dem Remote-Computer auf, indem Sie die Webseite <A href="http://localhost:9000/"><SPAN 
+  <LI class=l1>Rufen Sie die SqueezeCenter-Weboberfl&auml;che auf dem Remote-Computer auf, indem Sie die Webseite <A href="http://localhost:9000/"><SPAN 
   class=s2>http://localhost:9000</SPAN></A> &ouml;ffnen (Ersetzen Sie &bdquo;localhost&ldquo; durch die IP-Adresse des Remote-Computers). Sie sehen nun einen neuen &bdquo;Player&ldquo; mit der IP-Adresse des Computers, auf dem sich der MP3-Software-Player befindet. 
-  <LI class=l1>Im linken Bereich der SlimServer-Weboberfl&auml;che k&ouml;nnen Sie Dateien und Wiedergabelisten suchen und zur Wiedergabe ausw&auml;hlen. Ausgew&auml;hlte Musik wird im rechten Bereich der Weboberfl&auml;che angezeigt. 
-  <LI class=l1>Klicken Sie auf &bdquo;Wiedergabe&ldquo; im rechten Bereich der SlimServer-Weboberfl&auml;che, um die Musik abzuspielen. 
+  <LI class=l1>Im linken Bereich der SqueezeCenter-Weboberfl&auml;che k&ouml;nnen Sie Dateien und Wiedergabelisten suchen und zur Wiedergabe ausw&auml;hlen. Ausgew&auml;hlte Musik wird im rechten Bereich der Weboberfl&auml;che angezeigt. 
+  <LI class=l1>Klicken Sie auf &bdquo;Wiedergabe&ldquo; im rechten Bereich der SqueezeCenter-Weboberfl&auml;che, um die Musik abzuspielen. 
   <LI class=l1>Nach einigen Sekunden wird die Musik &uuml;ber den MP3-Software-Player abgespielt. (Die Verz&ouml;gerung ergibt sich durch die Pufferung in der MP3-Player-Software.) 
-  <LI class=l2>&Uuml;ber den Remote-Computer k&ouml;nnen Sie andere Titel zur Wiedergabe &uuml;ber die SlimServer-Weboberfl&auml;che ausw&auml;hlen. </LI></UL>
+  <LI class=l2>&Uuml;ber den Remote-Computer k&ouml;nnen Sie andere Titel zur Wiedergabe &uuml;ber die SqueezeCenter-Weboberfl&auml;che ausw&auml;hlen. </LI></UL>
 <P class=p2>Copyright 2003-2007, Logitech, Inc. Alle Rechte vorbehalten.</P></BODY></HTML>
