--- a/osx/Getting Started.nl.html
+++ b/osx/Getting Started.nl.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3c.org/TR/1999/REC-html401-19991224/loose.dtd">
 <!-- saved from url=(0087)http://svn.slimdevices.com/*checkout*/trunk/platforms/osx/Getting%20Started.html -->
-<HTML><HEAD><TITLE>Beginnen met SlimServer, Versie 7.0a</TITLE>
+<HTML><HEAD><TITLE>Beginnen met SqueezeCenter, Versie 7.0a</TITLE>
 <META http-equiv=Content-Type content="text/html; charset=UTF-8">
 <META http-equiv=Content-Style-Type content=text/css>
 <META content="MSHTML 6.00.2900.3059" name=GENERATOR>
@@ -50,9 +50,9 @@ LI.l2 {
 </STYLE>
 </HEAD>
 <BODY>
-<H1>Beginnen met SlimServer</H1>
+<H1>Beginnen met SqueezeCenter</H1>
 <P class=p2>Versie 7.0a</P>
-<P class=p3>Bedankt voor het downloaden van de nieuwste versie van SlimServer voor Mac OS X. Rol naar beneden of klik op de volgende links voor informatie over ieder onderwerp.</P>
+<P class=p3>Bedankt voor het downloaden van de nieuwste versie van SqueezeCenter voor Mac OS X. Rol naar beneden of klik op de volgende links voor informatie over ieder onderwerp.</P>
 <UL>
   <LI class=l1><SPAN class=s1><A 
   href="http://svn.slimdevices.com/*checkout*/trunk/platforms/osx/Getting%20Started.html#WhatsNew">Wat is er nieuw</A></SPAN> 
@@ -67,7 +67,7 @@ LI.l2 {
   href="http://svn.slimdevices.com/*checkout*/trunk/platforms/osx/Getting%20Started.html#iTunes">iTunes Informatie</A></SPAN> 
   <LI class=l2><SPAN class=s1><A 
   href="http://svn.slimdevices.com/*checkout*/trunk/platforms/osx/Getting%20Started.html#Streaming">Streaming van het afspelen via Internet</A></SPAN> </LI></UL>
-<P class=p3>Als u vragen of problemen hebt, kijk dan op de SlimServer web interface, of bekijk het <A 
+<P class=p3>Als u vragen of problemen hebt, kijk dan op de SqueezeCenter web interface, of bekijk het <A 
 href="http://www.slimdevices.com/redir.html?http://slimdevices.custhelp.com/cgi-bin/slimdevices.cfg/php/enduser/std_alp.php"><SPAN 
 class=s2>FAQ</SPAN></A>, bezoek ons <A 
 href="http://forums.slimdevices.com/"><SPAN class=s2>gebruikersforum</SPAN></A> of neem contact op met ons technische ondersteuningsteam via <A href="mailto:support@slimdevices.com"><SPAN 
@@ -75,7 +75,7 @@ class=s2>support@slimdevices.com</SPAN></A>.</P>
 <P class=p3>Bedankt,</P>
 <P class=p3>Het Logitech Streaming Media Systems Team</P><A name=WhatsNew>
 <P class=p4>Wat is er nieuw in 7.0a</P></A>
-<P class=p3>SlimServer versie 7.0a bevat een groot aantal verbeteringen. De volgende lijst bevat enkel de belangrijkste veranderingen, die invloed hebben op wat u ziet op het scherm of die de manier van werken met uw Squeezebox of Transporter veranderen/verbeteren. Als u wilt, kunt u de <A 
+<P class=p3>SqueezeCenter versie 7.0a bevat een groot aantal verbeteringen. De volgende lijst bevat enkel de belangrijkste veranderingen, die invloed hebben op wat u ziet op het scherm of die de manier van werken met uw Squeezebox of Transporter veranderen/verbeteren. Als u wilt, kunt u de <A 
 href="http://svn.slimdevices.com/*checkout*/trunk/server/Changelog6.html">complete lijst</SPAN></A> met veranderingen bekijken.</P>
 <UL>
   <LI class=l1>Gelokaliseerd in 6 talen: Engels, Duits, Frans, Spaans, Italiaans, Nederlands, en Hebreeuws, met inbegrip van de Mac en Windows installatieprogramma's. Andere talen kunnen worden toegevoegd in latere versies. Als u ons wilt helpen bij de inzet voor lokalisering, met inbegrip van vertalingen of testen in uw moedertaal, neem dan contact op met ons engeneering team via <A 
@@ -83,45 +83,45 @@ href="http://svn.slimdevices.com/*checkout*/trunk/server/Changelog6.html">comple
   class=s2>developers@slimdevices.com</SPAN></A>. 
   <LI class=l1>Veranderd volumecontrole voor Squeezebox, Squeezebox2, en Squeezebox v3 met gebruik van een schaalverdeling van 0 tot 100. 
   <LI class=l1>Extra ondersteuning voor het opslaan van albums, artiesten, genres en jaren als favorieten. 
-  <LI class=l1>Verscheidene veranderingen voor een verbetering van de manier waarop SlimServer uw muziekcollectie scant, met inbegrip van: het opsporen van enkel de bestanden die zijn veranderd sinds de laatste scan en het opsporen van enkel bestanden die op de schijf staan maar niet in de SlimServer database. 
-  <LI class=l1>Omdat Squeezeboxen het niet mogelijk maken om muziek af te spelen die gebruik maakt van digitaal rechtenmanagement (zoals Plays for Sure van Microsoft of FairPlay van Apple), worden liedjes uit uw eigen collectie met DRM uitgesloten van de SlimServer database. 
+  <LI class=l1>Verscheidene veranderingen voor een verbetering van de manier waarop SqueezeCenter uw muziekcollectie scant, met inbegrip van: het opsporen van enkel de bestanden die zijn veranderd sinds de laatste scan en het opsporen van enkel bestanden die op de schijf staan maar niet in de SqueezeCenter database. 
+  <LI class=l1>Omdat Squeezeboxen het niet mogelijk maken om muziek af te spelen die gebruik maakt van digitaal rechtenmanagement (zoals Plays for Sure van Microsoft of FairPlay van Apple), worden liedjes uit uw eigen collectie met DRM uitgesloten van de SqueezeCenter database. 
   <LI class=l1>Squeezebox 2 en Squeezebox v3 ondersteunen nu van oorsprong het Ogg muziek formaat. 
   <LI class=l1>Veranderd zoeken in numerieke lijsten. Het zoeken blijft hetzelfde voor lijsten van niet meer dan 10 items (de toetsen 1-9 leiden direct naar het overeenstemmende nummer en de 0-toets leidt naar nummer 10). Voor langere lijsten wordt iedere toets toegevoegd aan het zoeken, door op de toetsen 1, 4, 2 te drukken springt u naar item 1, dan naar item 14 en vervolgens naar item 142 in de lijst. 
   <LI class=l1>Als een speler de verbinding met de server verliest krijgt u een leeg scherm in plaats van een foutmelding. Door op een knop op de afstandsbediening te drukken wordt de foutmelding afgebeeld. Hierdoor worden de gebruikers niet midden in de nacht wakker gemaakt door een oplichtende foutmelding. 
   <LI class=l2>Voor de gebruikers van Transporter is de unieke TransNav knop verbeterd. </LI></UL><A name=Install>
 <P class=p4>Installatie</P></A>
-<P class=p3>Voor het installeren van de SlimServer software dubbelklikt u op het <B>Slim Installatieprogramma</B> en volgt u de instructies op het scherm. Het installatieprogramma toont u wanneer het installatieproces is voltooid. De SlimServer software voor Mac OS X wordt ge&iuml;nstalleerd als systeem instellingenvenster. Gebruik dit instellingenvenster voor:</P>
+<P class=p3>Voor het installeren van de SqueezeCenter software dubbelklikt u op het <B>Slim Installatieprogramma</B> en volgt u de instructies op het scherm. Het installatieprogramma toont u wanneer het installatieproces is voltooid. De SqueezeCenter software voor Mac OS X wordt ge&iuml;nstalleerd als systeem instellingenvenster. Gebruik dit instellingenvenster voor:</P>
 <UL>
-  <LI class=l1>Het handmatig of automatisch starten en stoppen van de SlimServer software, 
+  <LI class=l1>Het handmatig of automatisch starten en stoppen van de SqueezeCenter software, 
 
-  <LI class=l2>Start de SlimServer web interface </LI></UL>
-<P class=p3>Informatie over het gebruik van SlimServer is beschikbaar op de SlimServer web interface, onder de Help sectie op de Homepage.</P><A 
+  <LI class=l2>Start de SqueezeCenter web interface </LI></UL>
+<P class=p3>Informatie over het gebruik van SqueezeCenter is beschikbaar op de SqueezeCenter web interface, onder de Help sectie op de Homepage.</P><A 
 name=Firmware>
 <P class=p4>Firmware Update</A></P>
-<P class=p3>Als u een Squeezebox of een Transporter hebt, kan er een bericht worden afgebeeld om uw firmware te updaten bij de eerste aansluiting op SlimServer. Druk op de Brightness knop op de afstandsbediening en houd deze ingedrukt totdat de firmware update begint.</P><A name=RemoteProblem>
+<P class=p3>Als u een Squeezebox of een Transporter hebt, kan er een bericht worden afgebeeld om uw firmware te updaten bij de eerste aansluiting op SqueezeCenter. Druk op de Brightness knop op de afstandsbediening en houd deze ingedrukt totdat de firmware update begint.</P><A name=RemoteProblem>
 <P class=p4>Een WPA wachtwoord invoeren met de afstandsbediening</P></A>
 <P class=p3>De gebruikersgids voor Squeezebox en Transporter bevat een fout in de sectie over WPA wachtwoorden. Volgens de handleiding moet u de PLAY knop gebruiken om een letterteken in te voeren en de ADD knop om een letterteken te verwijderen. Dit is het tegenovergestelde van wat u moet doen. De handleiding zou moeten aangeven dat ADD een letterteken invoert en dat PLAY er &eacute;&eacute;n verwijderd.</P><A name=iTunes>
 <P class=p4>Ondersteuning iTunes collectie</A></P>
-<P class=p3>Als u iTunes van Apple gebruikt voor het beheren van uw muziek, wordt de informatie van uw iTunes collectie automatisch door SlimServer ge&iuml;mporteerd. Als u iTunes gebruikt om muziek toe te voegen of te verwijderen uit de collectie, merkt SlimServer de verandering op en wordt de muziekinformatie opnieuw gescand.</P>
-<P class=p8>Als u niet wilt dat SlimServer de iTunes informatie gebruikt moet u een map aangeven om te gebruiken voor uw muziekcollectie door de SlimServer web interface te starten, op de Serverinstellingen te klikken en een map aan te geven voor uw muziek. Als u muziek toevoegt in of verwijdert uit uw collectie, moet u handmatig opnieuw het scannen starten door naar de Serverinstellingen pagina op de SlimServer web interface te gaan en op Opnieuw Scannen te klikken.</P>
+<P class=p3>Als u iTunes van Apple gebruikt voor het beheren van uw muziek, wordt de informatie van uw iTunes collectie automatisch door SqueezeCenter ge&iuml;mporteerd. Als u iTunes gebruikt om muziek toe te voegen of te verwijderen uit de collectie, merkt SqueezeCenter de verandering op en wordt de muziekinformatie opnieuw gescand.</P>
+<P class=p8>Als u niet wilt dat SqueezeCenter de iTunes informatie gebruikt moet u een map aangeven om te gebruiken voor uw muziekcollectie door de SqueezeCenter web interface te starten, op de Serverinstellingen te klikken en een map aan te geven voor uw muziek. Als u muziek toevoegt in of verwijdert uit uw collectie, moet u handmatig opnieuw het scannen starten door naar de Serverinstellingen pagina op de SqueezeCenter web interface te gaan en op Opnieuw Scannen te klikken.</P>
 <P class=p4>Betreffende liedjes die u hebt gekocht in de iTunes Music Store</P>
 <P class=p3>Omdat Apple een digitaal rechtenmanagement (DRM) band gebruikt om het merendeel van de liedjes die worden verkocht in de iTunes Music Store, hebben deze bestanden beperkte gebruikersrechten. Een belangrijk recht dat Apple niet verstrekt is het recht om dat bestand af te spelen op een muziekspeler die niet door Apple wordt geleverd (een uitzondering is de computer waarop u het bestand hebt gekocht). Zolang Apple hun beleid betreffende licenties of uitsluiten van FairPlay niet verandert kunt u deze bestanden niet afspelen op de Squeezebox of de Transporter.</P>
-<P class=p4>Sommige liedjes in de iTunes collectie worden niet getoond in SlimServer of kunnen niet worden geopend.</P>
+<P class=p4>Sommige liedjes in de iTunes collectie worden niet getoond in SqueezeCenter of kunnen niet worden geopend.</P>
 <P class=p3>Als u de iTunes muziekbestanden van plaats hebt veranderd kan iTunes onjuiste informatie exporteren over de liedjes in de collectie. U moet verifi&euml;ren of iTunes de juiste map heeft voor uw muziekcollectie.</P>
 <P class=p3>Ga naar de iTunes instellingen en klik op Geavanceerd. Als het pad naar de map met uw muziekcollectie onjuist is moet u dit veranderen. Als het juist is, probeer dan om het te veranderen in een andere map en het opnieuw te veranderen in de juiste map. iTunes werkt dan de paden naar al uw muziek bij en exporteert de juiste gegevens. (Deze handeling verandert uw muziek niet van plaats, maar het dwingt iTunes om uw muziekcollectie te scannen en de paden naar de liedjes te updaten).</P>
 <P class=p3>Als dit het probleem niet oplost is het mogelijk dat iTunes vergissingen begaat als u de &quot;Muziekmap Georganiseerd Houden&quot; of de &quot;Bestandnummer Toevoegen&quot; instellingen hebt gewijzigd in iTunes. Probeer deze instellingen te veranderen en ze weer terug te zetten, zodat iTunes de juiste informatie over uw muziekbestanden update. Let er op dat de organisatie van uw muziekbestanden door iTunes ook kan betekenen dat de bestanden zelf van plaats worden veranderd of een andere naam krijgen.</P><A name=Streaming>
 <P class=p4>Streaming van het afspelen via Internet</A></P>
-<P class=p3>SlimServer is ontworpen om MP3 muziek naar een Squeezebox, Transporter of SLIMP3 Netwerk Muziekspeler te streamen. Als extra functie kan het ook uw MP3 bestanden via Internet streamen naar iedere software speler die MP3 streaming ondersteunt.</P>
-<P class=p3>Installeer eerst de SlimServer software en verifieer of de computer die wordt gebruikt als SlimServer kan worden bereikt via Internet. Zoniet, dan moet u poort 9000 op uw router naar de SlimServer computer sturen. (Raadpleeg uw router documentatie voor instructies). Vervolgens:</P>
+<P class=p3>SqueezeCenter is ontworpen om MP3 muziek naar een Squeezebox, Transporter of SLIMP3 Netwerk Muziekspeler te streamen. Als extra functie kan het ook uw MP3 bestanden via Internet streamen naar iedere software speler die MP3 streaming ondersteunt.</P>
+<P class=p3>Installeer eerst de SqueezeCenter software en verifieer of de computer die wordt gebruikt als SqueezeCenter kan worden bereikt via Internet. Zoniet, dan moet u poort 9000 op uw router naar de SqueezeCenter computer sturen. (Raadpleeg uw router documentatie voor instructies). Vervolgens:</P>
 <UL>
   <LI class=l1>Gebruikt u uw MP3 speler software om een stream te openen naar de URL: <A 
   href="http://localhost:9000/stream.mp3"><SPAN 
-  class=s2>http://localhost:9000/stream.mp3</SPAN></A>. (Verander &quot;localhost&quot; in het IP adres van de SlimServer computer). Als u een wachtwoord gebruikt voor SlimServer moet u een iets andere URL gebruiken, zoals deze: <A href="http://username:password@localhost:9000/stream.mp3"><SPAN 
+  class=s2>http://localhost:9000/stream.mp3</SPAN></A>. (Verander &quot;localhost&quot; in het IP adres van de SqueezeCenter computer). Als u een wachtwoord gebruikt voor SqueezeCenter moet u een iets andere URL gebruiken, zoals deze: <A href="http://username:password@localhost:9000/stream.mp3"><SPAN 
   class=s2>http://username:password@localhost:9000/stream.mp3</SPAN></A>. Sommige MP3 spelers beelden een bericht af om uw gebruikersnaam en wachtwoord in te voeren. 
-  <LI class=l1>Start de SlimServer web interface die op de computer op afstand draait door de webpagina <A href="http://localhost:9000/"><SPAN 
+  <LI class=l1>Start de SqueezeCenter web interface die op de computer op afstand draait door de webpagina <A href="http://localhost:9000/"><SPAN 
   class=s2>http://localhost:9000</SPAN></A> te openen (Verander &quot;localhost&quot; in het IP adres van de computer op afstand). U ziet nu een nieuwe &quot;speler&quot; die overeenstemt met het IP adres van de computer met de MP3 software speler. 
-  <LI class=l1>Gebruik het linker venster van de SlimServer web interface om te navigeren en bestanden en playlists te selecteren om af te spelen. Als er muziek geselecteerd is, verschijnt deze in het rechter venster van de web interface. 
-  <LI class=l1>Klik op &quot;Afspelen&quot; in het rechter venster van de SlimServer web interface om de muziek te starten. 
+  <LI class=l1>Gebruik het linker venster van de SqueezeCenter web interface om te navigeren en bestanden en playlists te selecteren om af te spelen. Als er muziek geselecteerd is, verschijnt deze in het rechter venster van de web interface. 
+  <LI class=l1>Klik op &quot;Afspelen&quot; in het rechter venster van de SqueezeCenter web interface om de muziek te starten. 
   <LI class=l1>Na een paar seconden hoort u de muziek spelen via de MP3 software speler. (De vertraging komt door het bufferen in de MP3 speler software). 
-  <LI class=l2>Om de afgespeelde muziek te wijzigen gebruikt u de SlimServer web interface op de computer op afstand. </LI></UL>
+  <LI class=l2>Om de afgespeelde muziek te wijzigen gebruikt u de SqueezeCenter web interface op de computer op afstand. </LI></UL>
 <P class=p2>Copyright 2003-2007, Logitech, Inc. Alle rechten voorbehouden.</P></BODY></HTML>
