--- a/win32/Getting Started.he.html
+++ b/win32/Getting Started.he.html
@@ -55,7 +55,7 @@
   <li  class="l1">שינינו את בקרת עוצמת הקול עבור Squeezebox&rlm;, Squeezebox2 ו-Squeezebox v3 לשימוש בסולם של 0-100.</li>
   <li  class="l1">הוספנו תמיכה לשמירה של אלבומים, מבצעים, סגנונות ושנים כפריטים מועדפים.</li>
   <li  class="l1">ביצענו מספר שינויים לשיפור באופן שבו SqueezeCenter סורק את ספריית המוסיקה, לרבות: איתור הקבצים ששונו מאז הסריקה האחרונה בלבד ואיתור הקבצים הקיימים בדיסק אך לא במסד הנתונים של SqueezeCenter בלבד.</li>
-  <li  class="l1">מכיוון שנגני Squeezebox לא תומכים בהשמעה של פריטי מוסיקה העושים שימוש בניהול זכויות דיגיטליות (כגון Plays for Sure של Mircrosoft או FairPlay של Apple), שירים בספריית המוסיקה המקומית שלך הכוללים DRM, לא נכללים במסד הנתונים של SqueezeCenter.</li>
+  <li  class="l1">מכיוון שנגני Squeezebox לא תומכים בהשמעה של פריטי מוסיקה העושים שימוש בניהול זכויות דיגיטליות (כגון Plays for Sure של Microsoft או FairPlay של Apple), שירים בספריית המוסיקה המקומית שלך הכוללים DRM, לא נכללים במסד הנתונים של SqueezeCenter.</li>
   <li  class="l1">כעת Squeezebox2 ו-Squeezebox v3 תומכים באופן טבעי בתבנית המוסיקה Ogg.</li>
   <li  class="l1">שינינו את אופן הפעולה של חיפושים ברשימות מספריות. אופן הפעולה נותר ללא שינוי עבור רשימות הכוללות 10 פריטים ומטה (לחצנים 1-9 עדיין ממפים ישירות למספר המתאים ו-&rlm;0 ממפה אל 10). עבור רשימות ארוכות יותר, כל לחצן שנלחץ נוסף לחיפוש; לדוגמה, לחיצה על הלחצנים 1, 4, 2 תעביר אותך לפריט 1, לאחר מכן לפריט 14 ולאחר מכן לפריט 142 ברשימה.</li>
   <li  class="l1">אם החיבור של נגן לשרת אובד, התצוגה הופכת לריקה במקום להציג הודעת שגיאה. לחיצה על כל לחצן שהוא בשלט-רחוק תגרום להצגת הודעת השגיאה. הדבר נעשה על מנת שמשתמשים לא יתעוררו באמצע הלילה בשל הודעת שגיאה בוהקת.</li>
