More inconsistent copyright notices.
git-svn-id: file:///home/awy/mirror/slim/trunk/platforms@13908 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/osx/Getting Started.de.html
+++ b/osx/Getting Started.de.html
@@ -113,4 +113,4 @@ name=Firmware>
   <LI class=l1>Klicken Sie auf &bdquo;Wiedergabe&ldquo; im rechten Bereich der SqueezeCenter-Weboberfl&auml;che, um die Musik abzuspielen. 
   <LI class=l1>Nach einigen Sekunden wird die Musik &uuml;ber den MP3-Software-Player abgespielt. (Die Verz&ouml;gerung ergibt sich durch die Pufferung in der MP3-Player-Software.) 
   <LI class=l2>&Uuml;ber den Remote-Computer k&ouml;nnen Sie andere Titel zur Wiedergabe &uuml;ber die SqueezeCenter-Weboberfl&auml;che ausw&auml;hlen. </LI></UL>
-<P class=p2>Copyright 2003-2007, Logitech, Inc. Alle Rechte vorbehalten.</P></BODY></HTML>
+<P class=p2>Copyright 2003-2007 Logitech</P></BODY></HTML>
