--- a/osx/Getting Started.es.html
+++ b/osx/Getting Started.es.html
@@ -113,4 +113,4 @@ name=Firmware>
   <LI class=l1>Para editar la m&uacute;sica, haga clic en &quot;Play&quot;, en el panel derecho de la interfaz Web de SqueezeCenter. 
   <LI class=l1>Al cabo de unos segundos, se oir&aacute; la m&uacute;sica emitida por el software reproductor MP3.   (Este tiempo de espera corresponde al buffering registrado en su software reproductor MP3). 
   <LI class=l2>Si lo desea, puede cambiar el contenido que se est&aacute; reproduciendo a trav&eacute;s de la interfaz Web de SqueezeCenter del ordenador remoto. </LI></UL>
-<P class=p2>Copyright 2003-2007, Logitech, Inc. Todos los derechos reservados.</P></BODY></HTML>
+<P class=p2>Copyright 2003-2007 Logitech</P></BODY></HTML>
