--- a/osx/Getting Started.it.html
+++ b/osx/Getting Started.it.html
@@ -124,4 +124,4 @@ name=Firmware>
   <LI class=l1>Per lanciare la musica, fare clic su &quot;Play&quot; nel pannello di destra dell'interfaccia web di SqueezeCenter. 
   <LI class=l1>Dopo un paio di secondi si potr&agrave; ascoltare la musica eseguita dal software di riproduzione MP3. (Il ritardo &egrave; dovuto al buffering del software di riproduzione MP3). 
   <LI class=l2>Per modificare la riproduzione dei contenuti, utilizzare l'interfaccia web di SqueezeCenter sulla macchina remota. </LI></UL>
-<P class=p2>Copyright 2003-2007, Logitech, Inc. Tutti i diritti riservati.</P></BODY></HTML>
+<P class=p2>Copyright 2003-2007 Logitech</P></BODY></HTML>
