--- a/osx/Getting Started.fr.html
+++ b/osx/Getting Started.fr.html
@@ -113,4 +113,4 @@ name=Firmware>
   <LI class=l1>Cliquez sur &quot;Lecture&quot;, dans le panneau droit de l'interface Web, pour lancer la musique. 
   <LI class=l1>Vous pourrez entendre la musique lue par le lecteur logiciel de&nbsp;MP3 au bout de quelques secondes. (Le d&eacute;lai d'attente est d&ucirc; &agrave; la mise en m&eacute;moire tampon dans le lecteur logiciel de MP3.) 
   <LI class=l2>Pour modifier la lecture, utilisez l'interface Web du SqueezeCenter sur l'ordinateur distant. </LI></UL>
-<P class=p2>Copyright 2003-2007, Logitech, Inc. Tous droits r&eacute;serv&eacute;s.</P></BODY></HTML>
+<P class=p2>Copyright 2003-2007 Logitech</P></BODY></HTML>
