fix copyright string on windows Getting Started documentation
git-svn-id: file:///home/awy/mirror/slim/trunk/platforms@14068 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/win32/Getting Started.fr.html
+++ b/win32/Getting Started.fr.html
@@ -116,4 +116,4 @@ href="http://svn.slimdevices.com/*checkout*/branches/7.0/server/Changelog6.html"
   <LI class=l1>Cliquez sur &quot;Lecture&quot;, dans le panneau droit de l'interface Web, pour lancer la musique. 
   <LI class=l1>Vous pourrez entendre la musique lue par le lecteur logiciel de&nbsp;MP3 au bout de quelques secondes. (Le d&eacute;lai d'attente est d&ucirc; &agrave; la mise en m&eacute;moire tampon dans le lecteur logiciel de MP3.) 
   <LI class=l2>Pour modifier la lecture, utilisez l'interface Web du SqueezeCenter sur l'ordinateur distant. </LI></UL>
-<P class=p2>Copyright 2003-2007, Logitech, Inc. Tous droits r&eacute;serv&eacute;s.</P></BODY></HTML>
+<P class=p2>&copy; 2003-2007 Logitech</P></BODY></HTML>
