--- a/win32/Getting Started.nl.html
+++ b/win32/Getting Started.nl.html
@@ -109,4 +109,4 @@ name=WhatsNew>
   <LI class=l1>Klik op &quot;Afspelen&quot; in het rechter venster van de SqueezeCenter web interface om de muziek te starten. 
   <LI class=l1>Na een paar seconden hoort u de muziek spelen via de MP3 software speler. (De vertraging komt door het bufferen in de MP3 speler software). 
   <LI class=l2>Om de afgespeelde muziek te wijzigen gebruikt u de SqueezeCenter web interface op de computer op afstand. </LI></UL>
-<P class=p2>Copyright 2003-2007, Logitech, Inc. Alle rechten voorbehouden.</P></BODY></HTML>
+<P class=p2>&copy; 2003-2007 Logitech</P></BODY></HTML>
